# l5-orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: api.md  architecture.md  plan1.md
scripts/: db_check.py
scripts/admin/: README.md  __init__.py  create_fleet.py  create_tenant.py
scripts/dev/: README.md  run_api.py  run_executor.py  run_scheduler.py
src/: README.md
src/adapters/aws/: __init__.py
src/adapters/db/: README.md  __init__.py  base.py  engine.py  session.py
src/adapters/s3/: __init__.py  client.py
src/apps/api/: auth.py  main.py
src/apps/workers/: __init__.py
src/domain/execution/: __init__.py
src/domain/forecasting/: __init__.py
src/domain/planning/: __init__.py  anchor_snapshots.py  forecast_refresh.py  occurrence_generation.py  plan_snapshots.py  planning.py  rescheduling.py
src/domain/runtime_prediction/: __init__.py
src/domain/scheduler/: __init__.py  engine.py  task.py
src/domain/services/: README.md  artifact_service.py  fleet_service.py  tenant_service.py  workload_service.py
src/domain/snapshot/: __init__.py
src/domain/tenancy/: __init__.py
src/domain/types/: schedule_rules.py  user_preferences.py
src/orchestrator/: main.py
src/orchestrator/api/: __init__.py  deps.py
src/orchestrator/config/: settings.py
src/orchestrator/db/: __init__.py  session.py
src/orchestrator/integrations/: __init__.py
src/orchestrator/interfaces/: __init__.py  clusters.py  data_sources.py  forecasts.py  optimiser.py
src/orchestrator/models/: __init__.py  artifact.py  base.py  client.py  job.py  (+4 more)
(+77 files in other folders)
